@@ -8,6 +8,7 @@ CQueryParams::CQueryParams()
   m_idArtist=-1;
   m_idAlbum=-1;
   m_idGenre=-1;
+  m_idSong=-1;
 }
 
 void CQueryParams::SetQueryParam(NODE_TYPE NodeType, const CStdString& strNodeName)
@@ -29,5 +30,12 @@ void CQueryParams::SetQueryParam(NODE_TYPE NodeType, const CStdString& strNodeNa
   case NODE_TYPE_ALBUM:
     m_idAlbum=idDb;
     break;
+  case NODE_TYPE_ALBUM_RECENTLY_ADDED_SONGS:
+  case NODE_TYPE_ALBUM_RECENTLY_PLAYED_SONGS:
+  case NODE_TYPE_ALBUM_TOP100_SONGS:
+  case NODE_TYPE_ALBUM_COMPILATIONS_SONGS:
+  case NODE_TYPE_SONG:
+  case NODE_TYPE_SONG_TOP100:
+    m_idSong=idDb;
   }
 }
